--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,33 +1,30 @@
 <footer>
   <div class="container__footer">
     <div class="box__footer">
-        <div class="logo">
-
-        </div>
-        <div class="terms">
-            <p>un espacio dedicado a la formación académica de calidad y al desarrollo personal de nuestros estudiantes. Nuestro compromiso es brindar una educación integral que combine teoría y práctica, preparando a los futuros profesionales para enfrentar los desafíos del mundo actual. Contamos con una amplia oferta de carreras y programas, profesores altamente capacitados, y modernas instalaciones que facilitan el aprendizaje. Además, promovemos valores como la innovación, la inclusión y la responsabilidad social para formar ciudadanos comprometidos con su comunidad y el entorno global.</p>
-        </div>
-    </div>
-    <div class="box__footer">
-        <h2>Contacto</h2>
-        <a href="/contact">Contactanos</a>
-        <a href="mailto:{{ contactInfo.email }}" target="_blank">Email</a>
-        <a href="https://wa.me/5492245403922" >Teléfono</a>
-        <a href="https://maps.app.goo.gl/ejjRrpouddoxWKk16">Ubicacion</a>
+      <div class="logo"></div>
+      <div class="terms">
+        <p>Un espacio dedicado a la formación académica de calidad y al desarrollo personal de nuestros estudiantes. Nuestro compromiso es brindar una educación integral que combine teoría y práctica, preparando a los futuros profesionales para enfrentar los desafíos del mundo actual. Contamos con una amplia oferta de carreras y programas, profesores altamente capacitados, y modernas instalaciones que facilitan el aprendizaje. Además, promovemos valores como la innovación, la inclusión y la responsabilidad social para formar ciudadanos comprometidos con su comunidad y el entorno global.</p>
+      </div>
     </div>
 
     <div class="box__footer">
-        <h2>Enlaces rápidos</h2>
-        <a href="/institucion">Nosotros</a>
-        <a href="/careers">Carreras</a>
-        <a href="/reservar">Reservar</a>
-        <a href="/contact">Contacto</a>         
+      <h2>Contacto</h2>
+      <a href="contact">Contactanos</a>
+      <a href="mailto:{{ contactInfo.email }}" target="_blank">Email</a>
+      <a href="https://wa.me/5492245403922">Teléfono</a>
+      <a href="https://maps.app.goo.gl/ejjRrpouddoxWKk16">Ubicacion</a>
     </div>
-</div>
 
+    <div class="box__footer">
+      <h2>Enlaces rápidos</h2>
+      <a href="institucion">Nosotros</a>
+      <a href="careers">Carreras</a>
+      <a href="reservar">Reservar</a>
+      <a href="contact">Contacto</a>         
+    </div>
+  </div>
 
   <div class="box__copyright">
     <p>&copy; {{ currentYear }} Centro Universitario. Todos los derechos reservados.</p>
   </div>
-
 </footer>
