--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <section class="hero">
 
       <div class="hero-content">
-        <h1 class="hero-title">{{ heroTitle }}</h1>
+        <h1 class="titulo">{{ heroTitle }}</h1>
         <p class="hero-subtitle">{{ heroSubtitle }}</p>
 
         <div class="hero-actions">
